--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="button.css">
-  </head>
-  <body>
-    <button id="changeColor"></button>
-    <script src="popup.js"></script>
-  </body>
+    <head>
+        <title>Silly Goose</title>
+        <script type="text/javascript" src="popup.js"></script>
+    </head>
+    <body>
+        <br />
+        <input type="button" id="btn" value="Webpage" />
+    </body>
 </html>
