Add search UI to menu
- import 'Mali' font
- search input & button DOM and CSS

--- a/popup.html
+++ b/popup.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Silly Goose</title>
-        <script type="text/javascript" src="popup.js"></script>
-    </head>
-    <body>
-        <br />
-        <input type="button" id="btn" value="Webpage" />
-    </body>
+<html lang="en">
+<head>
+    <title>Silly Goose</title>
+    <script type="text/javascript" src="popup.js"></script>
+    <link rel="stylesheet" href="styles/popup.css">
+</head>
+<body>
+
+<h1>Silly Goose</h1>
+<div class="wrap">
+    <label class="search">
+        <input type="text" class="searchTerm" placeholder="What are you looking for?">
+        <button type="submit" class="searchButton">&#x1F50E;</button>
+    </label>
+</div>
+
+</body>
 </html>
