Fix popup header style

--- a/popup.html
+++ b/popup.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="styles/popup.css">
 </head>
 <body>
-
-<h1>Silly Goose</h1>
+<header>
+    <img id="icon" src="images/goose48.png" alt="Silly Goose Icon">
+    <h1>Silly Goose</h1>
+</header>
 <div class="wrap">
     <label class="search">
         <input type="text" class="searchTerm" placeholder="What are you looking for?">
