--- a/popup.html
+++ b/popup.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="styles/popup.css">
 </head>
 <body>
-<header>
+<a class="header" href="https://github.com/dchen150/ELI5-chrome-extension">
     <img id="icon" src="images/goose48.png" alt="Silly Goose Icon">
     <h1>Silly Goose</h1>
-</header>
+</a>
 <div class="wrap">
     <label class="search">
         <input type="text" class="searchTerm" placeholder="What are you looking for?">
