Design CSS speech bubble

--- a/popup.html
+++ b/popup.html
@@ -28,7 +28,8 @@
 
 <div class="searchWrapper">
     <img alt="Silly Goose Icon" id="gooseHelper" src="images/goose128.png">
-    <label class="search">
+
+    <label class="speech-bubble talk-bubble tri-right border round btm-left-in">
         <input class="searchTerm" placeholder="What are you looking for?" type="text">
         <button class="searchButton" type="submit">&#x1F50E;</button>
     </label>
