--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,7 @@
     <title>Silly Goose</title>
     <script type="text/javascript" src="popup.js"></script>
     <link rel="stylesheet" href="styles/popup.css">
+    <meta charset="UTF-8">
 </head>
 <body>
 <template id="queryDisplay">
@@ -20,7 +21,7 @@
 
 <a class="header" href="https://github.com/dchen150/ELI5-chrome-extension">
     <h1 id="caption">Silly Goose <small>for Chrome</small></h1>
-    <h1 id="settings">⚙</h1>
+    <h1 id="settings">⚙️</h1>    <!-- &#x2699 -->
 </a>
 
 <div class="resultWrapper">
