Add Mr Goose from jiajia

--- a/popup.html
+++ b/popup.html
@@ -28,7 +28,7 @@
 </div>
 
 <div class="searchWrapper">
-    <img alt="Silly Goose Icon" id="gooseHelper" src="images/goose128.png">
+    <img alt="Silly Goose Icon" id="gooseHelper" src="images/mr_goose.png">
 
     <form>
         <label class="speech-bubble talk-bubble tri-right border round btm-left-in">
