Added author info

--- a/popup.html
+++ b/popup.html
@@ -24,10 +24,10 @@
     <h1 id="settings">⚙️</h1>    <!-- &#x2699 -->
 </a>
 
-<div class="resultWrapper">
+<div class="wrapper resultWrapper">
 </div>
 
-<div class="searchWrapper">
+<div class="wrapper searchWrapper">
     <img alt="Silly Goose Icon" id="gooseHelper" src="images/mr_goose.png">
 
     <form>
@@ -43,7 +43,11 @@
     </form>
 </div>
 
-
+<div class="wrapper authorWrapper"> Made with <span id="heart">♥</span> by
+    <a href="#" id="derek">Derek</a>,
+    <a href="#" id="flora">Flora</a>,
+    <a href="#" id="jiajia">Jiajia</a>,
+    <a href="#" id="truman">Truman</a></div>
 </body>
 
 </html>
