Added mr fat goose ico

--- a/popup.html
+++ b/popup.html
@@ -19,7 +19,7 @@
     </div>
 </template>
 
-<a class="header" href="https://github.com/dchen150/ELI5-chrome-extension">
+<a class="header" href="#">
     <h1 id="caption">Silly Goose <small>for Chrome</small></h1>
     <h1 id="settings">⚙️</h1>    <!-- &#x2699 -->
 </a>
