Fix stackoverflow formatting

--- a/popup.html
+++ b/popup.html
@@ -19,6 +19,17 @@
     </div>
 </template>
 
+<template id="questionAndAnswer">
+    <div class="resultItem">
+        <div class="question"><strong>Question: </strong></div>
+        <strong>Answer: </strong>
+        <div class="answer">
+        </div>
+        <div class="source">Source: <a href="#"></a></div>
+    </div>
+</template>
+
+
 <a class="header" href="#">
     <h1 id="caption">Silly Goose <small>for Chrome</small></h1>
     <h1 id="settings">⚙️</h1>    <!-- &#x2699 -->
