format for reddit

--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,7 @@
 <template id="resultItem">
     <div class="resultItem">
         <p class="resultContent"></p>
+        <div class="source">Source: <a href="#"></a></div>
     </div>
 </template>
 
