fix link not opening

--- a/popup.html
+++ b/popup.html
@@ -16,7 +16,7 @@
 <template id="resultItem">
     <div class="resultItem">
         <p class="resultContent"></p>
-        <div class="source">Source: <a href="#"></a></div>
+        <div class="source">Source: <a href="#" target="_blank"></a></div>
     </div>
 </template>
 
@@ -26,7 +26,7 @@
         <strong>Answer: </strong>
         <div class="answer">
         </div>
-        <div class="source">Source: <a href="#"></a></div>
+        <div class="source">Source: <a href="#" target="_blank"></a></div>
     </div>
 </template>
 
@@ -56,10 +56,10 @@
 </div>
 
 <div class="wrapper authorWrapper"> Made with <span id="heart">♥</span> by
-    <a href="#" id="derek">Derek</a>,
-    <a href="#" id="flora">Flora</a>,
-    <a href="#" id="jiajia">Jiajia</a>,
-    <a href="#" id="truman">Truman</a></div>
+    <a href="https://derekchen.dev/" id="derek" target="_blank">Derek</a>,
+    <a href="https://github.com/flora-yc/" id="flora" target="_blank">Flora</a>,
+    <a href="https://www.jiajiakong.ca/" id="jiajia" target="_blank">Jiajia</a>,
+    <a href="http://trumanhung.tech/" id="truman" target="_blank">Truman</a></div>
 </body>
 
 <!--<div class="loading">Please Wait</div>-->
