change silly goose to mr. goose

--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Silly Goose</title>
+    <title>Mr. Goose</title>
     <script type="text/javascript" src="popup.js"></script>
     <link rel="stylesheet" href="styles/popup.css">
     <meta charset="UTF-8">
@@ -32,7 +32,7 @@
 
 
 <a class="header" href="#">
-    <h1 id="caption">Silly Goose <small>for Chrome</small></h1>
+    <h1 id="caption">Mr. Goose <small>for Chrome</small></h1>
     <h1 id="settings">⚙️</h1>    <!-- &#x2699 -->
 </a>
 
@@ -40,7 +40,7 @@
 </div>
 
 <div class="wrapper searchWrapper">
-    <img alt="Silly Goose Icon" id="gooseHelper" src="images/mr_goose.png">
+    <img alt="Mr. Goose Icon" id="gooseHelper" src="images/mr_goose.png">
 
     <form>
         <label class="speech-bubble talk-bubble tri-right border round btm-left-in">
