--- a/popup.html
+++ b/popup.html
@@ -45,9 +45,9 @@
     <form>
         <label class="speech-bubble talk-bubble tri-right border round btm-left-in">
 
-            <input disabled id="response" placeholder="What are you looking for?" required type="text"
+            <input disabled id="response" placeholder="Interesting! Wow" required type="text"
                    value="Interesting! Wow">
-            <input class="search-box" id="searchTerm" placeholder="What are you looking for?" required type="text">
+            <input class="search-box" id="searchTerm" placeholder="I am here to help!" required type="text">
             <button class="close-icon" type="reset"></button>
             <button class="searchButton" disabled type="submit">&#x1F50E;</button>
             <!--        <button class="searchButton" type="submit" disabled>&#x1F50E;</button>-->
