--- a/popup.html
+++ b/popup.html
@@ -62,6 +62,6 @@
     <a href="http://trumanhung.tech/" id="truman" target="_blank">Truman</a></div>
 </body>
 
-<!--<div class="loading">Please Wait</div>-->
+<div class="loadingContainer"><div class="loading"><img alt="Mr. Goose Icon" class="rainbow_text_animated goose-loading" src="images/mr_fat_goose_static.png">Loading</div></div>
 
 </html>
