Ver 1.1: Add source from Google Fact Check Tools

--- a/popup.html
+++ b/popup.html
@@ -28,6 +28,14 @@
     </div>
 </template>
 
+<template id="factCheck">
+    <div class="resultItem factCheck">
+        <div class="question"><strong>Fact check: </strong></div>
+        <div class="answer"><strong>Rating: </strong></div>
+        <div class="source">Source: <a href="#" target="_blank"></a></div>
+    </div>
+</template>
+
 
 <a class="header" href="#">
     <h1 id="caption">Mr. Goose <small>for Chrome</small></h1>
